# SIEM_v0.0.1

./: .gitignore  Cargo.toml  README.md  index  log  log.txt  main.rs  main.sh
backup/: json_parser.rs
backup/json_version/: json_parser.rs
backup/json_version/api/: normalize.rs
backup/json_version/cn/: log_normalizer.rs  preprocessor.rs
backup/lib/: binary_search.rs  merge_sort.rs  thread_pool.rs
backup/other_version/: log_normalizer.rs  log_parser.rs  main.rs
backup/serde_version/api/: normalize.rs
backup/serde_version/cn/: log_normalizer.rs  log_parser.rs  mod.rs  preprocessor.rs
important/: mod.rs  parser.rs
indexer/: Cargo.toml  logs.txt
indexer/src/: main.rs
python_ported_normalizer/: Cargo.toml  README.md  pyproject.toml  test.py
python_ported_normalizer/src/: lib.rs
python_ported_normalizer/src/conf/: taxonomy.csv
rust_analyzer_actix/: Cargo.toml  README.md
rust_analyzer_actix/src/: main.rs
rust_analyzer_actix/src/api/: mod.rs  normalize.rs  normalizer_api.rs
rust_analyzer_actix/src/cn/: normalizer.rs  normalizer_instance.rs  parser.rs
rust_analyzer_actix/src/models/: cn_model.rs  mod.rs
rust_analyzer_actix/src/repo/: mongo_repo.rs
rust_analyzer_tokio/src/cn/: normalizer_instance.rs  searcher_instance.rs
rust_analyzer_tokio/src/repo/: mongo_repo.rs
src/: main.rs
src/cn/: _instance.rs  mod.rs  normalizer.rs  normalizer_instance.rs  parser_instance.rs  processor_instance.rs
src/important/: normalizer_instance.rs
src/repo/: mongo_repo.rs
