[package]
name = "leef"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6"
json = "0.12.4"
serde = "1.0.144"
serde_json = "1.0.85"
tokio = "1.21.0"
dotenv = "0.15.0"
futures = "0.3.24"
bson = "2.4.0"
mongodb = "2.3.0"
